log/build_2021-06-09_10-14-12/control_pkg/stdout_stderr.log
[35m[1mScanning dependencies of target control_pid_p1_node[0m
[ 50%] Built target control_pid_p2_node
[ 75%] [32mBuilding CXX object CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::timer_callback()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:110:41: error: conversion from ‘int’ to non-scalar type ‘interfaces::msg::PlatState’ {aka ‘interfaces::msg::PlatState_<std::allocator<void> >’} requested
  110 |     interfaces::msg::PlatState msg_publ=platform1_state;
      |                                         ^~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
